注册表单基本布局完成

--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -23,6 +23,13 @@ body {
   height: 60px;
   background: url(../images/login_title.png) no-repeat center;
 }
+.login-form {
+  display: block;
+}
+
+.reg-form {
+  display: none;
+}
 
 .layui-form {
   padding: 0 30px;
