--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -24,3 +24,10 @@
   line-height: 32px;
   vertical-align: middle;
 }
+
+.layui-body iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  display: block;
+}
